--- a/style.css
+++ b/style.css
@@ -1,42 +1,3 @@
-.manipulator {
-
-	width:100px;
-	height:100px;
-	position:fixed;
-	bottom:0;
-
+#shell #memberTools, #shell #mainTabs, #shell #editionListContainer {
+	display:none !important;
 }
-
-.manipulator#small {
-	right:300px;
-	background-color:orange;	
-}
-
-.manipulator#medium {
-	right:200px;
-	background-color:green;	
-}
-
-.manipulator#large {
-	right:100px;
-	background-color:blue;	
-}
-
-.manipulator#xlarge {
-	right:0;
-	background-color:yellow;	
-}
-
-body.small {
-	width:320px !important;
-}
-body.medium {
-	width:640px !important;
-}
-body.large {
-	width:960px !important;
-}
-body.xlarge {
-	width:100% !important;
-}
-
