--- a/style.css
+++ b/style.css
@@ -1,13 +1,42 @@
-<<<<<<< HEAD
-#temperatureExtension {
-	position:fixed;
-	bottom:0;
-	right:0;
+.manipulator {
+
 	width:100px;
 	height:100px;
-	background-color:yellow;
-=======
-#shell #memberTools, #shell #mainTabs, #shell #editionListContainer {
-	display:none !important;
->>>>>>> 929ea16a59b0da015b0cc87ea84830e8d03866c9
+	position:fixed;
+	bottom:0;
+
 }
+
+.manipulator#small {
+	right:300px;
+	background-color:orange;	
+}
+
+.manipulator#medium {
+	right:200px;
+	background-color:green;	
+}
+
+.manipulator#large {
+	right:100px;
+	background-color:blue;	
+}
+
+.manipulator#xlarge {
+	right:0;
+	background-color:yellow;	
+}
+
+body.small {
+	width:320px !important;
+}
+body.medium {
+	width:640px !important;
+}
+body.large {
+	width:960px !important;
+}
+body.xlarge {
+	width:100% !important;
+}
+
